# hexkit

./: .coveragerc  .deprecated_files  .deprecated_files_ignore  .editorconfig  .flake8  .gitattributes  .gitignore  .mandatory_files  .mandatory_files_ignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .static_files  .static_files_ignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  codecov.yml  cspell.json  great-docs.yml  migrate_v3.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev-common.in  requirements-dev-common.txt  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  dev_install  devcontainer-lock.json  devcontainer.json  docker-compose.yml  license_header.txt
.devcontainer/kafka_secrets/: .gitignore  create_secrets.sh
.devcontainer/library-scripts/: docker-in-docker-debian.sh
.github/workflows/: cd.yaml  check_mandatory_and_static_files.yaml  check_openapi_spec.yaml  check_pr_target.yaml  check_pyproject.yaml  check_template_files.yaml  deploy-docs.yml  publish_docs.yml  publish_pypi.yaml  pypi_publish.yaml  static_code_analysis.yaml  tests.yaml  unit_and_int_tests.yaml
.pyproject_generation/: README.md  pyproject_custom.toml  pyproject_template.toml
.readme_generation/: readme_template.md
.template/: README.md  deprecated_files.txt  deprecated_files_ignore.txt  mandatory_files.txt  mandatory_files_ignore.txt  static_files.txt  static_files_ignore.txt
docs/: .gitignore  README.md  glossary.md  great-docs.yml  index.md  notes.md  pyproject.toml
docs.new/: .gitignore  great-docs.yml  pyproject.toml
docs.new/scripts/: fix_source_link_paths.py
docs.new/user_guide/arch_concepts/: event_driven_arch.qmd  hexagonal_arch.qmd  triple_hexagonal_arch.qmd
docs.new/user_guide/developer_help/: outbox_v_persistent_pub.qmd
docs.new/user_guide/protocols/: overview.qmd
docs.new/user_guide/providers/: overview.qmd
docs/api/: index.md  summary.md
docs/api/hexkit/: __main__.md  base.md  config.md  correlation.md  custom_types.md  index.md  log.md  opentelemetry.md  utils.md
docs/arch_concepts/: dlq.md  event_driven_arch.md  hexagonal_arch.md  overview.md  triple_hexagonal_arch.md
docs/developer_help/: outbox_v_persistent_pub.md  overview.md  testing.md
docs/docs/: index.md
docs/docs/developer_help/: outbox_v_persistent_pub.md
docs/glossary/: index.md
docs/observability_tools/: correlation_ids.md  logging.md  overview.md
docs/protocols/: overview.md
docs/providers/: overview.md
docs/providers/kafka/: publisher.md  subscriber.md  test_utils.md
docs/providers/mongodb/: dao.md  kvstore.md  migration_tools.md  test_utils.md
docs/providers/mongokafka/: outbox_pub.md  persistent_publisher.md
docs/providers/redis/: kvstore.md
docs/providers/s3/: kvstore.md  overview.md  (+1 more)
docs/structure/: overview.md
docs/user_guide/: index.qmd
documentation/: mkdocs.yml
documentation/developer_help/: overview.md
documentation/documentation/: glossary.md
examples/: README.md  submit_example_problems.py
examples/akafka/: README.md  kafka_publisher.py  kafka_subscriber.py  message_schema.json
examples/auth_demo/: requirements.txt
examples/log_example/: README.md
examples/stream_calc/: __init__.py  __main__.py  config.py  container.py  main.py  submit_example_problems.py
hexkit/: __init__.py  __main__.py  akafka.py  base.py  config.py  custom_types.py  dep_inject.py  inject.py  utils.py
hexkit/eventpub/: __init__.py  protocol.py
hexkit/eventsub/: __init__.py  protocol.py
hexkit/protocols/: __init__.py  auth.py  dao.py  eventpub.py  eventsub.py  objstorage.py
hexkit/providers/: __init__.py  akafka.py  option1.py  option2.py  option3.py  option4.py  option5.py  option6.py
lock/: README.md  requirements-dev-template.in  requirements-dev.in  requirements-dev.txt  requirements.txt
pyquail/: __init__.py  config.py  custom_types.py
pyquail/eventpub/: protocol.py
scripts/: README.md  __init__.py  add_member_anchor_ids.py  check_license.py  check_mandatory_and_static_files.py  fix_source_link_paths.py  get_package_name.py  license_checker.py  list_outdated_dependencies.py  update_all.py  update_hook_revs.py  update_lock.py  update_openapi_docs.py  update_pyproject.py  update_static_files.py  update_template_files.py
scripts/script_utils/: __init__.py  cli.py  deps.py  fastapi_app_location.py  lock_deps.py
src/hexkit/: __init__.py  __main__.py  base.py  config.py  correlation.py  custom_types.py  inject.py  log.py  log_tools.py  opentelemetry.py  opentelemetry_setup.py  py.typed  utils.py
tests/: __init__.py  test_akafka.py  test_config.py
tests/examples/: __init__.py
tests/fixtures/: __init__.py  config.py  dummy_joint.py  inject.py  kafka_secrets.py  utils.py
tests/integration/: __init__.py  conftest.py  test_akafka.py  test_akafka_reset_scoped.py  test_akafka_testutils.py  test_correlation.py  test_dlqsub.py  test_event_loop_default.py  test_event_loop_overridden.py  test_inject.py  test_migrations.py  test_mongodb.py  test_mongokafka.py  test_mongokafka_testutils.py  test_persistent_pub.py  test_s3.py  test_translators.py
tests/unit/: __init__.py  test_akafka.py  test_base.py  test_config.py  test_correlation.py  test_dao.py  test_dlqsub.py  test_eventpub.py  test_eventsub.py  test_federated_s3.py  test_in_mem_dao.py  test_in_mem_eventpub.py  test_in_mem_kvstore.py  test_in_mem_objstorage.py  test_in_mem_pub.py  test_in_mem_s3.py  test_inject.py  test_logging.py  test_migrations.py  test_mongokafka.py  test_opentelemetry_testutils.py  test_s3_kvstore.py  test_testing_eventpub.py  test_utils.py
user_guide/: index.qmd  structure.qmd
user_guide/arch_concepts/: dao_pattern.qmd  dlq.qmd  event_driven_arch.qmd  index.qmd
user_guide/developer_help/: testing.qmd
user_guide/observability_tools/: logging.qmd
user_guide/protocols/: dao.qmd  daopublisher.qmd  daosubscriber.qmd  index.qmd  objstorage.qmd
user_guide/providers/: index.qmd  kafka.qmd  mongodb.qmd  mongodb_migrations.qmd  mongokafka.qmd  redis.qmd  s3.qmd  testing.qmd  vault.qmd
(+307 files in other folders)
