[build-system]
requires = [
    "setuptools>=80.9",
]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
authors = [
    { name = "German Human Genome Phenome Archive (GHGA)", email = "contact@ghga.de" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
name = "hexkit"
version = "7.1.0"
description = "A Toolkit for Building Microservices using the Hexagonal Architecture"
dependencies = [
    "opentelemetry-api >=1.37, <2",
    "pydantic >=2.11, <3",
    "pydantic_settings >=2.10, <3",
    "PyYAML >=6, <7",
]

[project.license]
text = "Apache 2.0"

[project.optional-dependencies]
akafka = [
    "aiokafka[zstd,lz4,snappy]~=0.12.0",
    "jsonschema >=4.25, <5",
]
s3 = [
    "boto3 >=1.40, <2",
    "botocore >=1.40, <2",
]
mongodb = [
    "pymongo >=4.15, <5",
]
opentelemetry-base = [
    "opentelemetry-sdk >=1.37.0, <2",
    "opentelemetry-exporter-otlp >=1.37.0, <2",
    "opentelemetry-instrumentation >=0.58b0",
    "opentelemetry-instrumentation-httpx >=0.58b0",
    "opentelemetry-distro >=0.58b0",
]
opentelemetry-akafka = [
    "hexkit[opentelemetry-base]",
    "hexkit[akafka]",
    "opentelemetry-instrumentation-aiokafka >=0.58b0",
]
opentelemetry-mongodb = [
    "hexkit[opentelemetry-base]",
    "hexkit[mongodb]",
    "opentelemetry-instrumentation-pymongo >=0.58b0",
]
opentelemetry-fastapi = [
    "hexkit[opentelemetry-base]",
    "opentelemetry-instrumentation-fastapi >=0.58b0",
]
opentelemetry-s3 = [
    "hexkit[opentelemetry-base]",
    "hexkit[s3]",
    "opentelemetry-instrumentation-botocore >=0.58b0",
]
opentelemetry = [
    "hexkit[opentelemetry-akafka]",
    "hexkit[opentelemetry-mongodb]",
    "hexkit[opentelemetry-fastapi]",
    "hexkit[opentelemetry-s3]",
]
test-akafka = [
    "hexkit[akafka]",
    "testcontainers[kafka] >=4.13, <5",
]
test-s3 = [
    "hexkit[s3]",
    "testcontainers >=4.13, <5",
]
test-mongodb = [
    "hexkit[mongodb]",
    "testcontainers[mongo] >=4.13, <5",
]
test = [
    "hexkit[test-akafka,test-s3,test-mongodb]",
]
all = [
    "hexkit[test]",
    "hexkit[opentelemetry]",
]

[project.urls]
Repository = "https://github.com/ghga-de/hexkit"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.ruff]
exclude = [
    ".git",
    ".devcontainer",
    "__pycache__",
    "build",
    "dist",
]
line-length = 88
src = [
    "src",
    "tests",
    "examples",
    "scripts",
]
target-version = "py310"

[tool.ruff.lint]
fixable = [
    "UP",
    "I",
    "D",
    "RUF022",
]
ignore = [
    "E111",
    "E114",
    "E116",
    "PLW",
    "RUF001",
    "RUF010",
    "RUF012",
    "N818",
    "B008",
    "PLR2004",
    "D205",
    "D400",
    "D401",
    "D107",
    "D206",
    "D300",
    "UP040",
    "PLC0206",
]
select = [
    "C90",
    "F",
    "I",
    "S",
    "B",
    "N",
    "UP",
    "PL",
    "RUF",
    "SIM",
    "D",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"scripts/*" = [
    "PL",
    "S",
    "SIM",
    "D",
]
"tests/*" = [
    "S",
    "SIM",
    "PLR",
    "B011",
]
".devcontainer/*" = [
    "S",
    "SIM",
    "D",
]
"examples/*" = [
    "S",
    "D",
]
"__init__.py" = [
    "D",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
disable_error_code = "import"
show_error_codes = true
exclude = [
    "build/lib/",
]
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_site_packages = false

[tool.pytest.ini_options]
minversion = "8.4"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.paths]
source = [
    "src",
    "/workspace/src",
    "**/lib/python*/site-packages",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    env_list = py3{10,11,12,13}

    [gh-actions]
    python =
        3.10: py310
        3.11: py311
        3.12: py312
        3.13: py313

    [testenv]
    pass_env =
        TC_HOST
        DOCKER_HOST
    deps =
        --no-deps -r ./lock/requirements-dev.txt
    commands =
        py310: pip install --no-deps backports.asyncio.runner==1.2.0 exceptiongroup==1.3.0 tomli==2.2.1
        pytest {posargs}
"""
