# Copyright 2021 - 2022 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = hexkit
version = attr: hexkit.__version__
description = A Toolkit for Building Microservices using the Hexagonal Architecture
url = https://github.com/ghga-de/hexkit
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Development Status :: 1 - Planning
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydantic>=1.8.2
    PyYAML>=5.4.1
    dependency-injector>=4.38.0
python_requires = >= 3.9

[options.package_data]
* = *.yaml, *.json

[options.extras_require]
akafka =
    kafka-python>=2.0.2
    jsonschema>=3.2.0
dev =
    pytest
    pytest-cov
    pytest-asyncio
    mypy
    pylint
    black
    flake8
    isort
    bandit
    pre-commit
    mkdocs
    mkdocs-material
    mkdocstrings
    testcontainers[kafka]
all =
    %(akafka)s

[options.packages.find]
exclude = tests
