# Copyright 2021 - 2023 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = hexkit
version = attr: hexkit.__version__
description = A Toolkit for Building Microservices using the Hexagonal Architecture
url = https://github.com/ghga-de/hexkit
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Development Status :: 1 - Planning
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydantic==1.10.4
    PyYAML==6.0
    dependency-injector==4.41.0
python_requires = >= 3.9

[options.package_data]
* = *.yaml, *.json

[options.extras_require]
akafka =
    aiokafka==0.8.0
    jsonschema>=4.17.3
s3 =
    boto3==1.26.50
    botocore==1.29.50
mongodb =
    motor==3.1.1
dev =
    pytest==7.2.1
    pytest-asyncio==0.20.3
    pytest-cov==4.0.0
    mypy==0.991
    pylint==2.15.10
    click==8.1.3
    black==22.12.0
    flake8==6.0.0
    isort==5.11.4
    bandit==1.7.4
    pre-commit==2.21.0
    requests==2.28.1
    types-requests==2.28.11.7
    mkdocs==1.4.2
    mkdocs-autorefs==0.4.1
    mkdocs-material==9.0.3
    mkdocs-material-extensions==1.1.1
    mkdocstrings==0.19.1
    mkdocstrings-python-legacy==0.2.3
    testcontainers[kafka,mongo]==3.7.1
all =
    %(akafka)s
    %(s3)s
    %(mongodb)s
    %(dev)s

[options.packages.find]
exclude = tests
