# Copyright 2021 - 2023 Universität Tübingen, DKFZ, EMBL, and Universität zu Köln
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = hexkit
version = attr: hexkit.__version__
description = A Toolkit for Building Microservices using the Hexagonal Architecture
url = https://github.com/ghga-de/hexkit
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Development Status :: 1 - Planning
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydantic==1.10.6
    PyYAML==6.0
    dependency-injector==4.41.0
python_requires = >= 3.9

[options.package_data]
* = *.yaml, *.json

[options.extras_require]
akafka =
    aiokafka==0.8.0
    jsonschema>=4.17.3
s3 =
    boto3==1.26.50
    botocore==1.29.50
mongodb =
    motor==3.1.1

test =
    testcontainers==3.4.1

test-akafka =
    %(akafka)s
    %(test)s
    testcontainers-kafka
test-s3 =
    %(s3)s
    %(test)s
    testcontainers-localstack
test-mongodb =
    %(mongodb)s
    %(test)s
    testcontainers-mongodb

test-all =
    %(test-akafka)s
    %(test-s3)s
    %(test-mongodb)s

all =
    %(akafka)s
    %(s3)s
    %(mongodb)s
    %(test-all)s

[options.packages.find]
exclude = tests
